// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gov-radios class options should add classes to legend span 1`] = `
<div class="form-group" id="my-id-form">
  <fieldset class="inline">
    <legend>
      <span class="form-label test-legend-class">Select a radio button</span>
    </legend>
    <div class="multiple-choice">
      <input id="my-id-yes" type="radio" name="selection" value="yes" />
      <label for="my-id-yes">Yes</label>
    </div>
    <div class="multiple-choice">
      <input id="my-id-no" type="radio" name="selection" value="no" />
      <label for="my-id-no">No</label>
    </div>
  </fieldset>
</div>
`;

exports[`gov-radios class options should add inline class to form to fieldset when two radio buttons are supplied 1`] = `
<div class="form-group" id="my-id-form">
  <fieldset class="inline">
    <legend>
      <span class="form-label test-legend-class">Select a radio button</span>
    </legend>
    <div class="multiple-choice">
      <input id="my-id-yes" type="radio" name="selection" value="yes" />
      <label for="my-id-yes">Yes</label>
    </div>
    <div class="multiple-choice">
      <input id="my-id-no" type="radio" name="selection" value="no" />
      <label for="my-id-no">No</label>
    </div>
  </fieldset>
</div>
`;

exports[`gov-radios class options should have no classes on fieldset when two or more radio buttons are supplied 1`] = `
<div class="form-group" id="my-id-form">
  <fieldset>
    <legend>
      <span class="form-label test-legend-class">Select a radio button</span>
    </legend>
    <div class="multiple-choice">
      <input id="my-id-yes" type="radio" name="selection" value="yes" />
      <label for="my-id-yes">Yes</label>
    </div>
    <div class="multiple-choice">
      <input id="my-id-no" type="radio" name="selection" value="no" />
      <label for="my-id-no">No</label>
    </div>
    <div class="multiple-choice">
      <input id="my-id-maybe" type="radio" name="selection" value="maybe" />
      <label for="my-id-maybe">Maybe</label>
    </div>
  </fieldset>
</div>
`;

exports[`gov-radios radio button options should add data fields when supplied 1`] = `
<div class="form-group" id="my-id-form">
  <fieldset class="inline">
    <legend>
      <span class="form-label">Select a radio button</span>
    </legend>
    <div class="multiple-choice" data-target="data-target" data-journey-click="data-target-click">
      <input id="my-id-id" type="radio" name="selection" value="value-id" />
      <label for="my-id-id">label-id</label>
    </div>
  </fieldset>
</div>
`;

exports[`gov-radios should add a form hint using the hint attribute 1`] = `
<div class="form-group" id="my-id-form">
  <fieldset class="inline">
    <legend>
      <span class="form-label">Select a radio button</span>
      <span class="form-hint">Select one of the below</span>
    </legend>
    <div class="multiple-choice">
      <input id="my-id-yes" type="radio" name="selection" value="yes" />
      <label for="my-id-yes">Yes</label>
    </div>
    <div class="multiple-choice">
      <input id="my-id-no" type="radio" name="selection" value="no" />
      <label for="my-id-no">No</label>
    </div>
  </fieldset>
</div>
`;

exports[`gov-radios should add error message and classes when passed an error object 1`] = `
<div class="form-group error" id="my-id-form">
  <fieldset class="inline">
    <legend>
      <span class="form-label">Select a radio button</span>
      <span class="error-message">Select an option</span>
    </legend>
    <div class="multiple-choice">
      <input id="my-id-yes" type="radio" name="selection" value="yes" />
      <label for="my-id-yes">Yes</label>
    </div>
    <div class="multiple-choice">
      <input id="my-id-no" type="radio" name="selection" value="no" />
      <label for="my-id-no">No</label>
    </div>
  </fieldset>
</div>
`;

exports[`gov-radios should set the ID as input-{name} if ID attr not supplied and generate radio buttons 1`] = `
<div class="form-group" id="input-selection-form">
  <fieldset class="inline">
    <legend>
      <span class="form-label">Select a radio button</span>
    </legend>
    <div class="multiple-choice">
      <input id="input-selection-yes" type="radio" name="selection" value="yes"
      />
      <label for="input-selection-yes">Yes</label>
    </div>
    <div class="multiple-choice">
      <input id="input-selection-no" type="radio" name="selection" value="no"
      />
      <label for="input-selection-no">No</label>
    </div>
  </fieldset>
</div>
`;

exports[`gov-radios should set the radio button to checked if the value matches 1`] = `
<div class="form-group" id="my-id-form">
  <fieldset class="inline">
    <legend>
      <span class="form-label">Select a radio button</span>
    </legend>
    <div class="multiple-choice">
      <input id="my-id-yes" type="radio" name="selection" value="yes" />
      <label for="my-id-yes">Yes</label>
    </div>
    <div class="multiple-choice">
      <input id="my-id-no" type="radio" name="selection" value="no" checked
      />
      <label for="my-id-no">No</label>
    </div>
  </fieldset>
</div>
`;

exports[`gov-radios should use ID attribute value over generated input-{name} ID and generate radio buttons 1`] = `
<div class="form-group" id="my-id-form">
  <fieldset class="inline">
    <legend>
      <span class="form-label">Select a radio button</span>
    </legend>
    <div class="multiple-choice">
      <input id="my-id-yes" type="radio" name="selection" value="yes" />
      <label for="my-id-yes">Yes</label>
    </div>
    <div class="multiple-choice">
      <input id="my-id-no" type="radio" name="selection" value="no" />
      <label for="my-id-no">No</label>
    </div>
  </fieldset>
</div>
`;
